[2-4]-Product-VilinVil
added AddOrderHandler, fixed bug with no return when method not allowed in basket handlers, upgraded documentation
