# internal/pkg/server/delivery/mux/mux.go
@@ -55,6 +55,7 @@ func NewMux(ctx context.Context, configMux *ConfigMux, userStorage userusecases.
 	router.Handle("/api/v1/product/get_list", middleware.Context(ctx, productHandler.GetProductListHandler))
 	router.Handle("/api/v1/product/update/", middleware.Context(ctx, productHandler.UpdateProductHandler))
 
+	router.Handle("/api/v1/order/add", middleware.Context(ctx, productHandler.AddOrderHandler))
 	router.Handle("/api/v1/order/get_basket", middleware.Context(ctx, productHandler.GetBasketHandler))
 	router.Handle("/api/v1/order/update_count", middleware.Context(ctx, productHandler.UpdateOrderCountHandler))
 	router.Handle("/api/v1/order/update_status", middleware.Context(ctx, productHandler.UpdateOrderStatusHandler))
